crates/nirvash-macros/tests/fixtures/subsystem_spec_invalid_symmetry.stderr
error: #[invariant(SpecType)] 形式へ移行せよ
  --> tests/fixtures/subsystem_spec_invalid_symmetry.rs:15:18
   |
15 | #[subsystem_spec(invariants(legacy_invariant))]
   |                  ^^^^^^^^^^
